--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Call Us</a></li>
-                <li><a href="#" class="animated-text">Our Official Blog</a></li>
+                <li class="animated-text"><a href="#">Our Official Blog</a></li>
             </ul>
         </div>
     </div>
