--- a/index.html
+++ b/index.html
@@ -16,14 +16,29 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Call Us</a></li>
-                <li class="animated-text"><a href="#">Our Official Blog</a></li>
+                <li class="animated-text"><a href="#">Our Official Blog!</a></li>
             </ul>
         </div>
     </div>
     <main class="main">
         <div class="main-content">
+            <h2>Welcome..</h2>
             <div class="container">
-
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
+                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
+                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
+                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
+                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
+                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
+                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
+                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
+                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
+                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
+                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
+                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
+                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!
+                </p>
             </div>
         </div>
     </main>
