--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#2c3e50">
+    <meta name="theme-color" content="#4285f4">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/desktop-solid.svg" type="image/icon type">
+    <link rel="icon" href="images/desktop-solid.svg" type="image/icon type" sizes="192x192">
     <title>Home | Animated Website</title>
 </head>
 <body>
     <div class="header">
         <div class="header-content">
             <h1>Animated Website</h1>
-            <ul>
+            <div class="menu">
+                <div class="row-1"></div>
+                <div class="row-2"></div>
+                <div class="row-3"></div>
+                <div class="row-4"></div>
+            </div>
+            <ul class="list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Call Us</a></li>
