--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Call Us</a></li>
                 <li class="animated-text"><a href="#">Our Official Blog!</a></li>
+                <li><a href="/login/login.html" class="login-button">Log In</a></li>
             </ul>
         </div>
     </div>
