Created a random number generator and styled it

--- a/index.html
+++ b/index.html
@@ -34,20 +34,15 @@
             <h2>Welcome..</h2>
             <div class="container">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
-                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
-                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
-                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
-                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
-                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
-                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
-                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
-                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
-                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
-                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia architecto 
-                reiciendis voluptas eius doloremque natus, vel nulla nihil odio expedita sed 
-                recusandae ipsum vitae quae a esse? Soluta, laborum aliquid!
+                    Welcome to our random numbers generating Website!
+                    <span>Let's get started!</span>
                 </p>
+                <div class="random">
+                    <button id="random-button">
+                        Click me to generate!
+                    </button>
+                    <span id="random-number"></span>
+                </div>
             </div>
         </div>
     </main>
