Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <button id="random-button">
                         Click me to generate!
                     </button>
-                    <span id="random-number"></span>
+                    <span id="random-number">Random number will be generated here</span>
                 </div>
             </div>
         </div>
