Redesigned the mobile view

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 </p>
                 <div class="random">
                     <button id="random-button">
-                        Click me to generate!
+                        Click here to generate!
                     </button>
-                    <span id="random-number">Random number will be generated here</span>
+                    <span id="random-number">Random number will be generated here!</span>
                 </div>
             </div>
         </div>
