--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
     <title>Home | Animated Website</title>
 </head>
 <body>
+    <!--Header starts here-->
     <div class="header">
         <div class="header-content">
             <h1>Animated Website</h1>
-            <div class="menu">
-                <div class="row-1"></div>
-                <div class="row-2"></div>
-                <div class="row-3"></div>
-                <div class="row-4"></div>
-            </div>
             <ul class="list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -27,8 +22,15 @@
                 <li class="animated-text"><a href="#">Our Official Blog!</a></li>
                 <li class="login-button-1"><a href="/login/login.html" class="login-button">Log In</a></li>
             </ul>
+            <div class="menu">
+                <div class="row-1"></div>
+                <div class="row-2"></div>
+                <div class="row-3"></div>
+            </div>
         </div>
     </div>
+    <!--Header ends here-->
+    <!--Main content starts here-->
     <main class="main">
         <div class="main-content">
             <h2>Welcome..</h2>
@@ -46,6 +48,7 @@
             </div>
         </div>
     </main>
+    <!--Main content ends here-->
     <script src="JS/app.js"></script>
 </body>
 </html>
