--- a/Login/login.html
+++ b/Login/login.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link type="image/icon type" href="" rel="icon">
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
     <title>Home | Login</title>
 </head>
 <body>
-    
+    <!--Navigation bar starts here-->
+    <nav>
+        <h2>Login Page</h2>
+        <ul class="nav-links">
+            <li><a href="login.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="burger">
+            <div class="row-1"></div>
+            <div class="row-2"></div>
+            <div class="row-3"></div>
+        </div>
+    </nav>
+    <!--Navigation bar ends here-->
+    <script src="JS/app.js"></script>
 </body>
 </html>
