--- a/Login/login.html
+++ b/Login/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <link type="image/icon type" href="" rel="icon">
+    <link type="image/icon type" href="images/laptop-code-solid.svg" rel="icon" sizes="192x192">
     <link rel="stylesheet" href="styles/style.css" type="text/css">
     <title>Home | Login</title>
 </head>
