--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Call Us</a></li>
                 <li class="animated-text"><a href="#">Our Official Blog!</a></li>
-                <li class="login-button-1"><a href="/login/login.html" class="login-button">Log In</a></li>
+                <li class="login-button-1"><a href="Login/login.html" class="login-button">Log In</a></li>
             </ul>
             <div class="menu">
                 <div class="row-1"></div>
